@@ -22,8 +22,11 @@ public class LineNumbering {
 
     @Test
     public void basicTests() {
-        assertEquals(List.of(), LineNumbering.number(List.of()));
-        assertEquals(Arrays.asList("1: a", "2: b", "3: c"), LineNumbering.number(Arrays.asList("a", "b", "c")));
-        assertEquals(Arrays.asList("1: ", "2: ", "3: ", "4: ", "5: "), LineNumbering.number(Arrays.asList("", "", "", "", "")));
+        assertEquals(List.of(),
+                LineNumbering.number(List.of()));
+        assertEquals(Arrays.asList("1: a", "2: b", "3: c"),
+                LineNumbering.number(Arrays.asList("a", "b", "c")));
+        assertEquals(Arrays.asList("1: ", "2: ", "3: ", "4: ", "5: "),
+                LineNumbering.number(Arrays.asList("", "", "", "", "")));
     }
 }
